k8s/dev/discovery-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: discovery-server
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: discovery-server
  template:
    metadata:
      labels:
        app: discovery-server
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8761"
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: discovery-server
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: discovery-server
          image: ross1832/spring-petclinic-discovery-server:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8761
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
