k8s/dev/vets-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vets-service
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vets-service
  template:
    metadata:
      labels:
        app: vets-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8083"
    spec:
      nodeSelector:
        env: dev   #changed propper labeling
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: vets-service
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: vets-service
          image: ross1832/spring-petclinic-vets-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8083
