k8s/dev/visits-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: visits-service
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: visits-service
  template:
    metadata:
      labels:
        app: visits-service
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/actuator/prometheus"
        prometheus.io/port: "8082"
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: visits-service
                topologyKey: "kubernetes.io/hostname"
      containers:
        - name: visits-service
          image: ross1832/spring-petclinic-visits-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8082
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
